Fix scrollbar issuses and better styles

--- a/components/AddGameModal/Content/PlayerSelection/ChoosePlayer/ChoosePlayer.module.scss
+++ b/components/AddGameModal/Content/PlayerSelection/ChoosePlayer/ChoosePlayer.module.scss
@@ -10,7 +10,7 @@
 }
 
 .playerList {
-  @extend %scrollbar;
+  @include scrollbar(true);
   @extend %card-bg;
   @include flex-y(null);
 
