--- a/components/Homepage/Queue/Queue.module.scss
+++ b/components/Homepage/Queue/Queue.module.scss
@@ -23,7 +23,7 @@
 
 
 .list {
-  @extend %scrollbar;
+  @include scrollbar(true);
 
   color: $color-gray-200;
   display: flex;
